# EmpresaAerea

./: AeroTracker  CMakeCache.txt  CMakeLists.txt  Environment.h  Makefile  cmake_install.cmake  main.c
core/: Aeronave.c  Aeroporto.c  Aeroporto.h  Usuario.c  Voo.c  core.c  core.h
core Headers/: Aeronave.h  Aeroporto.h  Usuario.h  Voo.h
core/Aeronave/: Aeronave.c  Aeronave.h  Comparator.c  Comparator.h
core/Aeroporto/: Aeroporto.c  Aeroporto.h  Comparator.c  Comparator.h
core/Cliente/: Cliente.c  Cliente.h  Comparator.c  Comparator.h
core/List/Operations/: List.c  List.h
core/List/Sort/: mergeSort.c  mergeSort.h
core/Usuario/: Usuario.c
core/Voo/: Comparator.c  Comparator.h  VooInfo.c  VooInfo.h
input/: string.c  string.h
populate files/: aeronaves.txt  aeroportos.txt  clientes.txt  entrada.txt  voos.txt
ui/: VooInfo.c  VooInfo.h  cadastrosMenuUI.c  cadastrosMenuUI.h  cadastrosVooUI.c  cadastrosVooUI.h  inserirVooUI.c  inserirVooUI.h  main.c  mainMenuUI.c  mainMenuUI.h
ui/Menu/Main/: MenuMain.c  MenuMain.h  mainMenuUI.c  mainMenuUI.h
ui/Menu/Main/Cadastros/: MenuCadastros.c  MenuCadastros.h  cadastrosMenuUI.c  cadastrosMenuUI.h
ui/Menu/Main/Cadastros/Aeronave/: cadastrosAeronaveUI.c  cadastrosAeronaveUI.h
ui/Menu/Main/Cadastros/Aeronave/Inserir/: inserirAeronaveUI.c  (+1 more)
ui/Menu/Main/Cadastros/Cliente/: cadastrosClienteUI.c  cadastrosClienteUI.h  inserirClienteUI.c  inserirClienteUI.h
ui/Menu/Main/Cadastros/Voo/: cadastrosVooUI.c  cadastrosVooUI.h  inserirVooUI.c  inserirVooUI.h
ui/Menu/Main/Cadastros/VooCadastro/: VooCadastros.c  VooCadastros.h
ui/Menu/Main/Status/: statusMenuUI.c  statusMenuUI.h
ui/Menu/Voos/: cadastrosVooUI.h  inserirVooUI.c  inserirVooUI.h
(+26 files in other folders)
